# Sudoku-Solver

./: .gitignore  CMakeLists.txt  README.md
forms/: board.ui
include/: Board.h  Solver.h
src/: Board.cpp  Solver.cpp  main.cpp  mainwindow.cpp
